# ChangeLog for kde-base/kdeartwork-styles
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork-styles/ChangeLog,v 1.125 2009/10/18 14:52:27 maekke Exp $

  18 Oct 2009; Markus Meier <maekke@gentoo.org>
  kdeartwork-styles-4.3.1.ebuild:
  x86 stable, bug #287697

  12 Oct 2009; Jonathan Callen <abcd@gentoo.org>
  -kdeartwork-styles-3.5.9.ebuild:
  KDE 3.5.9 removal

  10 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
  kdeartwork-styles-4.3.1.ebuild:
  amd64 stable wrt #287697

  08 Oct 2009; Alexey Shvetsov <alexxy@gentoo.org>
  -kdeartwork-styles-4.3.0.ebuild:
  Drop KDE 4.3.0

*kdeartwork-styles-4.3.2 (06 Oct 2009)

  06 Oct 2009; Alexey Shvetsov <alexxy@gentoo.org>
  +kdeartwork-styles-4.3.2.ebuild:
  Version bump

*kdeartwork-styles-4.3.1 (01 Sep 2009)

  01 Sep 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  +kdeartwork-styles-4.3.1.ebuild:
  Version bump

*kdeartwork-styles-4.3.0 (04 Aug 2009)

  04 Aug 2009; Alex Alexander <wired@gentoo.org>
  +kdeartwork-styles-4.3.0.ebuild:
  Version bump

  12 Jul 2009; Raúl Porcel <armin76@gentoo.org>
  kdeartwork-styles-3.5.10.ebuild:
  alpha/ia64/sparc stable wrt #271889

  08 Jul 2009; Alexey Shvetsov <alexxy@gentoo.org>
  kdeartwork-styles-3.5.10.ebuild:
  Add ~mips keywords

  18 Jun 2009; Jeroen Roovers <jer@gentoo.org>
  kdeartwork-styles-3.5.10.ebuild:
  Stable for HPPA (bug #271889).

  14 Jun 2009; Alexey Shvetsov <alexxy@gentoo.org>
  -kdeartwork-styles-4.2.3.ebuild:
  Drop KDE 4.2.3

  06 Jun 2009; Markus Meier <maekke@gentoo.org>
  kdeartwork-styles-3.5.10.ebuild:
  amd64/x86 stable, bug #271889

  04 Jun 2009; Alexey Shvetsov <alexxy@gentoo.org>
  kdeartwork-styles-4.2.4.ebuild:
  Fix accidently added keywords

*kdeartwork-styles-4.2.4 (04 Jun 2009)

  04 Jun 2009; Alexey Shvetsov <alexxy@gentoo.org>
  +kdeartwork-styles-4.2.4.ebuild:
  Version bump

  03 Jun 2009; Alexey Shvetsov <alexxy@gentoo.org>