@@ -1,0 +1,13 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork-styles/kdeartwork-styles-4.3.3.ebuild,v 1.1 2009/11/02 20:49:37 wired Exp $
+
+EAPI="2"
+
+KMMODULE="styles"
+KMNAME="kdeartwork"
+inherit kde4-meta
+
+DESCRIPTION="Extra styles for kde"
+KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~x86"
+IUSE="debug"
