@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdeartwork-styles
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork-styles/ChangeLog,v 1.125 2009/10/18 14:52:27 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeartwork-styles/ChangeLog,v 1.126 2009/11/02 20:49:37 wired Exp $
+
+*kdeartwork-styles-4.3.3 (02 Nov 2009)
+
+  02 Nov 2009; Alex Alexander <wired@gentoo.org>
+  +kdeartwork-styles-4.3.3.ebuild:
+  Version bump
 
   18 Oct 2009; Markus Meier <maekke@gentoo.org>
   kdeartwork-styles-4.3.1.ebuild:
